--- a/index.html
+++ b/index.html
@@ -13,21 +13,7 @@
             <p>Gestione Asta Fantacalcio</p>
         </header>
 
-        <!-- Mobile Tab Navigation (visible only on mobile) -->
-        <div class="mobile-tabs">
-            <button class="mobile-tab active" data-tab="players">🏠 Giocatori</button>
-            <button class="mobile-tab" data-tab="team">👥 Squadra</button>
-            <button class="mobile-tab" data-tab="filters">⚙️ Filtri</button>
-            <button class="mobile-tab" data-tab="details">📊 Dettagli</button>
-        </div>
-
-        <!-- Mobile Budget Bar (visible only on mobile) -->
-        <div class="mobile-budget-bar">
-            <div>💰 <span id="mobileBudget">500</span> crediti</div>
-            <div>👥 <span id="mobileTeamCount">0</span>/25</div>
-        </div>
-
-        <!-- Team Management Section -->
+        <!-- Sezione gestione squadra -->
         <div class="team-management">
             <div class="budget-info">
                 <h3>Budget Disponibile</h3>
@@ -141,13 +127,13 @@
                     <table id="playersTable">
                         <thead>
                             <tr>
-                                <th class="desktop-only">Stato</th>
+                                <th>Stato</th>
                                 <th>Nome</th>
                                 <th>Ruolo</th>
-                                <th class="desktop-only">Squadra</th>
-                                <th class="desktop-only">Fantamedia 2024-2025</th>
+                                <th>Squadra</th>
+                                <th>Fantamedia 2024-2025</th>
                                 <th>Punteggio</th>
-                                <th class="desktop-only">Trend</th>
+                                <th>Trend</th>
                                 <th>Azioni</th>
                             </tr>
                         </thead>
